--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,13 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #212121;
+    background-color: #01001B;
+}
+:root{
+    --container: 75rem;
+    --colorOne: #4997FF;
+    --height: calc(100vh - 5rem);
+    --top: 5.5rem; 
 }
 #container{
     display: flex;
@@ -20,8 +26,8 @@ body{
     display: flex;
     justify-content: center;
 }
-#container_about, #container_hardSkill, #container_footer{
-    background-color: #1d1d1d;
+#container_about, #portfolio_container, #container_footer{
+    background-color: #050515;
 }
 /* ========================== HEADER =======================*/
 #header{
@@ -32,10 +38,11 @@ body{
     position: fixed;
 }
 .header_container{
-    width: 75rem;
+    width: var(--container);
     height: 5.5rem;
     display: flex;
     justify-content: space-around;
+    border: 1px solid red;
 }
 .header_brandName{
     flex: 1;
@@ -60,45 +67,67 @@ body{
     margin-right: 3.5rem;
 
 }
-.list_social > a{
-    color: #fff;
-    margin-left: 1rem;
+.navbar_list > a:hover{
+    color: #4997FF;
 }
-.navbar_list > a:hover, .list_social > a:hover{
-    color: indianred;
-    transform: scale(1.3);
-}
-/* ==========================  CONTAINER  =======================*/
+/* ==========================  CONTENT GENERAL  =======================*/
 #container_wrapper{
+    height: var(--height);
     margin-top: 5.5rem;
+    background-image: url(../img/bg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .wrapper{
-    width: 75rem;
-    height: 85vh;
+    width: var(--container);
     display: flex;
 }
-.wrapper_text{
-    align-self: center;
+.wrapper_info{
+    display: flex;
+    flex-direction: column;
     flex: 1;
     color: #fff;
+}
+/* ======= Text ======*/
+.wrapper_text{
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 .wrapper_paragraph{
     font-size: 1.5rem;
 }
 .wrapper_title{
-    font-size: 2.8rem;
+    font-size: 4.5rem;
 }
 .wrapper_subtitle{
-    font-weight: 400;
-    font-size: 2.1rem;
+    font-weight: 600;
+    color: #4997FF;
+    font-size: 2.5rem;
 }
+/* ======= Social ======*/
+.wrapper_social{
+    flex: 1;
+    margin-top: 1.25rem;
+}
+.wrapper_social > a{
+    color: #fff;
+    margin-left: 1rem;
+}
+.wrapper_social > a > i:hover{
+    color: #4997FF;
+}
+/* ======= Image ======*/
 .wrapper_img{
     flex: 1;
 }
 /* ======================= ABOUT =====================*/
 .about_content{
-    width: 75rem;
-    height: 31.25rem;
+    width: var(--container);
+    height: var(--height);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,11 +137,54 @@ body{
     width: 65rem;
     height: 25rem;
     display: flex;
-    border: 1px solid red;
 }
 .about_img, .about_info{
     flex: 1;
+}
+/* ======= Image ======*/
+/* ======= About ======*/
+.info_title, .portfolio_tilte, .skill_title{
+    font-size: 2rem;
+    padding-bottom: 1.25rem;
+    position: relative;
+    color: #fff;
+}
+.info_title::after, .portfolio_tilte::after, .skill_title::after{
+    content: '';
+    position: absolute;
+    width: 8.438rem;
+    height: 0.125rem;
+    background-color: var(--colorOne);
+    top: 2.5rem;
+    left: 1.875rem;
+}
+.info_about{
+    font-size: 1.2rem;
+    text-align: justify;
+    font-weight: 500;
+    word-wrap: break-word;
+    line-height: 2rem;
+    text-indent: 1.25rem;
+    color: #fff;
+}
+.info_about:not(:last-child){
+    margin-bottom: 1rem;
+}
+/* ======================= HARD SKILL =====================*/
+.hardSkill{
+    width: 75rem;
+    height: 25rem;
+    display: flex;
+    justify-content: center;
     border: 1px solid red;
+}
+.skill_title{
+    padding: 2.5rem 0;
+}
+.skill_title::after{
+    width: 4.438rem;
+    top: 5rem;
+    left: 0.875rem;
 }
 /* ======================= PORTFOLIO =====================*/
 #portfolio_container{
@@ -121,14 +193,37 @@ body{
     justify-content: center;
 }
 .portfolio{
-    width: 75rem;
-    height: 25rem;
+    width: var(--container);
+    height: var(--height);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 1px solid red;
 }
-/* ======================= HARD SKILL =====================*/
-.hardSkill{
-    width: 75rem;
-    height: 25rem;
+.portfolio_tilte{
+    padding: 2.5rem 0;
+}
+.portfolio_tilte::after{
+    width: 7.5rem;
+    left: 0.938rem;
+    top: 5rem;
+}
+.portfolio_project{
+    width: 70rem;
+    height: 30rem;
+    display: flex;
+    flex-direction: column;
+    
+}
+.container_project{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.project{
+    flex: 1;
+    height: 100%;
     border: 1px solid red;
 }
 /* ======================== CONTACT ======================*/
@@ -140,9 +235,10 @@ body{
 
 /* ========================= FOOTER =======================*/
 .footer{
-    width: 75rem;
+    width: var(--container);
     display: flex;
     flex-direction: column;
+ 
     border: 1px solid red;
 }
 .footer_brandName{
@@ -155,7 +251,7 @@ body{
     width: 65rem;
     height: 1px;
     margin-left: 1.25rem;
-    background-color: #fff;
+    background-color: #000;
 }
 .footer_menus{
     width: 25rem;
@@ -170,16 +266,17 @@ body{
 }
 .menu_items ul a{
     text-decoration: none;
-    color: #fff;
+    color: #000;
     font-size: 1rem;
     font-weight: 300;
 }
 .menu_items ul a li{
     margin-top: 1.25rem;
+    color: #fff;
 }
 .menu{
-    color: #fff;
     font-size: 1.25rem;
+    color: #fff;
 }
 .copy{
     width: 100%;
@@ -187,5 +284,6 @@ body{
     display: flex;
     justify-content: center;
     line-height: 3rem;
+    color: #fff;
     border: 1px solid red;
 }
