--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,6 @@ body{
     display: flex;
     justify-content: center;
     line-height: 3rem;
-    color: #fff;
+    color: darkgrey;
     border: 1px solid red;
 }
