--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,7 +411,7 @@ html{
 .copy_content{
     width: var(--container);
 }
-/* ======================= MEDIA ==================*/
+/* ======================= @KEYFRAMES ==================*/
 @keyframes blink {
     0%, 100%{
         opacity: 1;
