--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,27 +31,27 @@ html, body{
     display: flex;
     justify-content: center;
     box-shadow: 0 0 20px #000;
+    position: fixed;
     z-index: 10;
+    background-color: #fff;
 }
 .header_container{
     width: var(--container);
     height: 5.5rem;
     display: flex;
-    border: 1px solid red;
 }
 .header_brandName{
     flex: 1;
-    height: inherit;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid red;
 }
-.header_brandName a {
+.header_brandName > a {
     width: 100%;
-    height: inherit;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
+}
+.header_brandName > a > img{
+    height: 60px;
 }
 .header_navbar{
     flex: 5;
@@ -118,7 +118,7 @@ html, body{
 }
 .wrapper_social > a{
     color: #212121;
-    margin-left: 1rem;
+    margin-right: 1rem;
 }
 .wrapper_social > a > i:hover{
     color: #4997FF;
@@ -254,7 +254,7 @@ html, body{
     line-height: 1.4rem;
 }
 /* ======================= PORTFOLIO =====================*/
-#portfolio_container{
+#container_portfolio{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -296,7 +296,7 @@ html, body{
     margin-right: 1.5rem;
 }
 .portfolio_buttons button:nth-child(1){
-    margin-left: 8rem;
+    margin-left: 0rem;
 }
 .portfolio_buttons .active_btn{
     border-bottom: 2px solid var(--colorOne);
@@ -318,7 +318,7 @@ html, body{
     overflow: hidden;
     transition: all .3s;
     box-shadow: 5px 5px 0 rgb(32 33 37 / 5%);
-    border: 1px solid rgb(32 33 37 / 30%);
+    border: 1px solid rgb(32 33 37 / 15%);
     border-radius: 8px;
     margin: 1rem;
     transition: all .3s;
@@ -397,11 +397,42 @@ html, body{
     align-items: center;
 }
 .footer{
-    flex: 1;
-    width: var(--container);
     display: flex;
     flex-direction: column; 
-    border: 1px solid red;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.footer_brandName, .footer_menu, .footer_social{
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+}
+.footer_brandName .brandName_content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer_brandName, .footer_menu, .footer_social figcaption{
+    margin-left: 1rem;
+}
+.footer_menu > ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+}
+.footer_menu > ul > a{
+    margin: 1.5rem;
+    padding: .5rem;
+    text-decoration: none;
+    color: #212121;
+}
+.footer_social > a{
+    color: #212121;
+    margin-left: 1.5rem;
+}
+.footer_social > a:hover{
+    color: #4997FF;
 }
 
 .copy{
@@ -413,8 +444,8 @@ html, body{
     line-height: 3rem;
     color: #666666;
 }
-.copy_content{
-    width: var(--container);
+.copy p{
+    font-size: .8rem;
 }
 /* ======================= @KEYFRAMES ==================*/
 @keyframes blink {
