--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ html, body{
     padding: 3rem 0;
 }
 .hardSkill{
-    width: 75rem;
+    width: var(--container);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -388,8 +388,86 @@ html, body{
     padding: 1rem .6rem;
     color: #212121;
 }
-
-
+/* ========================= CONTACT =======================*/
+#container_contact{
+    display: flex;
+    justify-content: center;
+}
+.contact{
+    width: var(--container);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 60px;
+}
+.contact_presentation, .contact_form{
+    flex: 1;
+}
+.contact_form{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.contact_form fieldset{
+    border: none;
+}
+.contact_presentation h2{
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 500;
+    padding: 20px 0;
+}
+.contact_presentation p{
+    font-size: .9rem;
+    padding: 15px 0;
+}
+.form_field{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.field_group{
+    width: 25rem;
+    flex: 1;
+    padding: 20px;
+}
+.max{
+    flex: 2;
+}
+.field_group input{
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 20px;
+    padding: 15px;
+    margin-top: 5px;
+    font-size: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.171);
+}
+.field_group textarea{
+    width: 100%;
+    margin-top: 10px;
+    padding: 10px;
+    line-height: 1.5;
+    font-size: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.171);
+    resize: none;
+}
+.form_btn{
+    width: 250px;
+    margin: 20px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.171);
+    cursor: pointer;
+    background-color: var(--colorOne);
+    color: #fff;
+}
+.form_btn:hover{
+    transform: scale(.9);
+}
+.form_btn i{
+    margin-left: 5px;
+}
 /* ========================= FOOTER =======================*/
 #container_footer{
     display: flex;
@@ -447,6 +525,7 @@ html, body{
 .copy p{
     font-size: .8rem;
 }
+
 /* ======================= @KEYFRAMES ==================*/
 @keyframes blink {
     0%, 100%{
