--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,18 +398,18 @@ html, body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding-bottom: 60px;
 }
 .contact_presentation, .contact_form{
     flex: 1;
 }
 .contact_form{
+    width: 80%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
-}
-.contact_form fieldset{
-    border: none;
 }
 .contact_presentation h2{
     text-align: center;
@@ -422,12 +422,16 @@ html, body{
     padding: 15px 0;
 }
 .form_field{
+    width: 95%;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    border: none;
 }
 .field_group{
-    width: 25rem;
+    display: flex;
+    flex-direction: column;
     flex: 1;
     padding: 20px;
 }
@@ -435,7 +439,6 @@ html, body{
     flex: 2;
 }
 .field_group input{
-    width: 100%;
     height: 2.5rem;
     border-radius: 20px;
     padding: 15px;
