--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ html, body{
 .header_brandName > a {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
 .header_brandName > a > img{
@@ -70,9 +70,22 @@ html, body{
 }
 .navbar_list > a:hover{
     color: #4997FF;
+    border-bottom: 2px solid #4997FF;
 }
 .navbar_list .active{
     border-bottom: 2px solid var(--colorOne);
+}
+.navbar_icon{
+    height: 5.5rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.navbar_icon i{
+    color: #4997FF;
+    cursor: pointer;
+    margin-right: 5%;
+    display: none;
 }
 /* ==========================  CONTENT GENERAL  =======================*/
 
@@ -108,7 +121,7 @@ html, body{
     font-size: 2.5rem;
 }
 .wrapper_subtitle::after{
-    content: "_";
+    content: "|";
     animation: blink .7s infinite;
 }
 /* ======= Social ======*/
@@ -321,7 +334,7 @@ html, body{
     border: 1px solid rgb(32 33 37 / 15%);
     border-radius: 8px;
     margin: 1rem;
-    transition: all .3s;
+    animation: zoomIn .5s;
 }
 .card_container:hover{
     transition: all .5s;
@@ -387,6 +400,9 @@ html, body{
 .card_content .card_link a{
     padding: 1rem .6rem;
     color: #212121;
+}
+.hide{
+    display: none;
 }
 /* ========================= CONTACT =======================*/
 #container_contact{
@@ -537,4 +553,138 @@ html, body{
     50%{
         opacity: 0;
     }
+}
+/* ======================= @Media =======================*/
+@media (max-width: 320px) {
+    .header_brandName > a > img {
+        margin-left: 20px;
+    }
+    #container #container_wrapper .wrapper_subtitle {
+        font-size: 1.5rem;
+    }
+    .copy p {
+        font-size: 0.7rem;
+    }
+}
+@media (max-width: 375px) {
+    .info_about {
+        font-size: 1rem;
+    }
+    .hardSkill .skill_content {
+        padding: 0.2rem;
+    }
+}
+@media (max-width: 425px) {
+    #container_wrapper .wrapper_info .wrapper_text {
+        flex: 3;
+    }
+    #container_wrapper .wrapper_info .wrapper_subtitle {
+        font-size: 2rem;
+    }
+    .hardSkill .skill_content {
+        justify-content: space-evenly;
+    }
+    .hardSkill .skill_content .skill_card {
+        width: 165px;
+        height: 240px;
+    }
+    .hardSkill .skill_content .skill_card p {
+        font-size: 0.8rem;
+        line-height: 1.2rem;
+    }
+}
+/* Small devices (landscape phones, 576px and up)*/
+@media (max-width: 576px) {
+    .wrapper_info .wrapper_text{
+        flex: 2;
+    }
+    #container_wrapper .wrapper_title {
+        font-size: 3.5rem;
+    }
+    #container_wrapper .wrapper_subtitle {
+        font-size: 2.2rem;
+    }
+    .wrapper_img{
+        display: none;
+    }
+    .about_content{
+        flex-direction: column;
+        padding: 3.5rem 0
+    }
+    .about_content .about_img{
+        display: flex;
+        justify-content: center;
+    }
+    .portfolio_buttons {
+        justify-content: center;
+    }
+    .contact_form {
+        width: 90%;
+    }
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media (max-width: 768px) {  
+    .wrapper_info .wrapper_text .wrapper_title {
+        font-size: 2.5rem;
+    }
+    .navbar_list{
+        display: none;
+    }
+    .navbar_icon i{
+        display: flex;
+    }
+    .portfolio_buttons {
+        justify-content: center;
+    }
+    .contact_form{
+        width: 100%;
+    }
+    .contact_presentation p {
+        text-align: center;
+        padding: 0px 5%;
+    }
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media (max-width: 992px) {  
+    .wrapper_text{
+        flex: 3;
+    }
+    .wrapper_text .wrapper_title {
+        font-size: 3rem;
+    }
+    .wrapper_img img{
+        width: 110%;
+        align-items: center;
+        margin-bottom: -100px;
+    }
+}
+
+/* X-Large devices (large desktops, 1200px and up)*/
+@media (max-width: 1200px) {  
+    .wrapper_title {
+        font-size: 4rem;
+    }
+    .wrapper_subtitle {
+        font-size: 2rem;
+    }
+    .wrapper_info{
+        padding-left: 20px;
+    }
+    .wrapper_img img{
+        width: 130%;
+        margin-top: 60px;
+        padding-right: 50px;
+    }
+    .about_info{
+        padding: 25px;
+    }
+    .about_content {
+        padding: 4rem 0;
+    }
+}
+
+/* XX-Large devices (larger desktops, 1400px and up)*/
+@media (min-width: 1400px) {  
 }
